[deepak]Refactor:change of file names,status codes and adding purpose of each file
