# src/routes/noteroutes.js
@@ -1,3 +1,12 @@
+/**
+ * @purpose      To forward control to handler fn when given path is hit.
+ * @module       routes
+ * @file         noteroutes.js
+ * @author       deepak 
+ * @since        9/1/2022
+ */
+
+
 //import
 let express = require("express");
 const noteValidate = require("../validators/NotesValidation")
@@ -7,7 +16,7 @@ const notesCon = require("../controller/NotesController");
 //create router object
 let router = express.Router();
 
-router.post("/notes", auth,noteValidate.note, notesCon.saveController);
+router.post("/addnotes", auth,noteValidate.note, notesCon.saveController);
 router.get("/notes", auth, notesCon.getNotesController);
 router.put("/update", auth,noteValidate.note, notesCon.updateController);
 router.delete("/delete", auth, notesCon.deleteController);
