# src/swagger/swagger.json
@@ -6,14 +6,14 @@
     "version": "1.1.0"
   },
   "paths": {
-    "/register": {
+    "/users/register": {
       "post": {
         "tags": ["User SignUp"],
         "summary": "Register a user.",
         "parameters": [
           {
             "in": "body",
-            "name": "Login Data",
+            "name": "User Data",
             "required": true,
             "schema": {
               "type": "object",
@@ -44,7 +44,7 @@
         }
       }
     },
-    "/login": {
+    "/users/login": {
       "post": {
         "tags": ["User SignIn"],
         "summary": "Login a user.",
@@ -76,7 +76,7 @@
         }
       }
     },
-    "/forgotpassword": {
+    "/users/forgotpassword": {
       "post": {
         "tags": ["Forgot-Password"],
         "description": "Send Email link to reset password",
@@ -108,7 +108,7 @@
         }
       }
     },
-    "/resetpassword": {
+    "/users/resetpassword": {
       "patch": {
         "tags": ["Reset-Password"],
         "description": "Update password with new password  !!",
@@ -155,7 +155,7 @@
         }
       }
     },
-    "/addnotes": {
+    "/notes/addnotes": {
       "post": {
         "tags": ["Create Notes"],
         "description": "Create a  note !!",
@@ -203,7 +203,6 @@
           }
         ],
         "produces": ["application/json"],
-        "schema": {},
         "responses": {
           "201": {
             "description": "Create note succesfully !!"
@@ -217,7 +216,7 @@
         }
       }
     },
-    "/getnotes": {
+    "/notes/notes": {
       "get": {
         "tags": ["Get All Notes"],
         "description": "See all notes !!",
@@ -239,9 +238,6 @@
           }
         ],
         "produces": ["application/json"],
-        "schema": {
-          "$ref": "#/definitions/GetNote"
-        },
         "responses": {
           "200": {
             "description": "Succesfully !! retrieve all notes."
@@ -255,7 +251,7 @@
         }
       }
     },
-    "/update": {
+    "/notes/update": {
       "put": {
         "tags": ["Update Notes"],
         "description": "Update a Specific by note id !!",
@@ -328,7 +324,7 @@
         }
       }
     },
-    "/delete": {
+    "/notes/delete": {
       "delete": {
         "tags": ["Delete Notes"],
         "description": "Delete a note by note id ",
@@ -376,7 +372,7 @@
         }
       }
     },
-    "/deleted": {
+    "/notes/deleted": {
       "get": {
         "tags": ["Get All Deleted Notes"],
         "description": "Get all deleted notes !!",
@@ -398,9 +394,6 @@
           }
         ],
         "produces": ["application/json"],
-        "schema": {
-          "$ref": "#/definitions/GetNote"
-        },
         "responses": {
           "200": {
             "description": "Succesfully !! retrieve all notes."
@@ -414,7 +407,7 @@
         }
       }
     },
-    "/archived": {
+    "/notes/archived": {
       "get": {
         "tags": ["Get All Archived Notes"],
         "description": "Get all archived notes!!",
@@ -436,9 +429,6 @@
           }
         ],
         "produces": ["application/json"],
-        "schema": {
-          "$ref": "#/definitions/GetNote"
-        },
         "responses": {
           "200": {
             "description": "Succesfully !! retrieve all notes."
